--- a/Timer/Base.lproj/Main.storyboard
+++ b/Timer/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RQd-5z-pVg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RQd-5z-pVg">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -175,8 +175,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="hiE-TJ-pQ8"/>
                     <connections>
-                        <outlet property="timeViewsubject" destination="Xhl-o8-ChE" id="Jie-2v-gJd"/>
-                        <outlet property="timelabel" destination="jBD-WJ-bu9" id="ATZ-wj-o48"/>
+                        <outlet property="timeViewsubject" destination="Xhl-o8-ChE" id="Gzc-f8-bLx"/>
+                        <outlet property="timelabel" destination="jBD-WJ-bu9" id="yHW-hJ-5tg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USW-QS-04b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
